--- a/web/app/views/layouts/_footer.html.erb
+++ b/web/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <section class="bg-gray-50 leading-6 flex flex-col font-light md:px-0 md:text-base mt-10 md:mt-5 px-5 py-6 text-center text-gray-600 text-sm w-full pb-24 md:pb-6 <%= "me-footer--#{params[:controller]}" if params[:controller] %>">
 
-	<a aria-label="Baixar aplicativo para android" class="inline-block mx-auto w-content" href='https://play.google.com/store/apps/details?id=com.alegreme.app&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+	<a aria-label="Baixar aplicativo para android" rel="noreferrer" class="inline-block mx-auto w-content" href='https://play.google.com/store/apps/details?id=com.alegreme.app&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
 		<img alt='Disponível no Google Play' loading="lazy" width="200" src='https://play.google.com/intl/en_us/badges/static/images/badges/pt-br_badge_web_generic.png'/>
 	</a>
 
