--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -65,10 +65,17 @@
 			<% end %>
 		</div>
 		<% if !current_user && controller_name == 'feeds' %>
-			<%= link_to new_user_registration_path, class: 'md:hidden my-auto w-8' do %>
-				<svg class="float-right w-6 text-gray-800 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+			<%= link_to search_index_path, class: 'md:hidden my-auto', 'aria-label': 'Buscar' do %>
+				<svg class="fill-current h-auto text-gray-800 w-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+					<path fill="none" d="M0 0h24v24H0V0z"/>
+					<path d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+				</svg>
+			<% end %>
+			<%= link_to new_user_registration_path, class: 'bg-gray-100 flex font-semibold md:hidden ml-2 my-auto px-2 py-1 rounded-full text-gray-800' do %>
+				<svg class="float-right mr-1 w-6 text-gray-800 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"/>
 				</svg>
+				Entrar
 			<% end %>
 		<% end %>
 	</div>
