Adjust categories for mobile in search#index

--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -72,7 +72,7 @@
 															action:     'click->main-sidebar--horizontal-event#openEvent',
 															'event-id': event.id
 														},
-														'aria-label': event.details_name,
+														'aria-label': event.name,
 														class:        'inline-block flex-shrink-0 cursor-pointer w-12 h-12 md:h-16 md:w-16' do %>
 									<%= image_tag shrine_image_url(event, :feed), {
 										loading: :lazy,
