--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -19,9 +19,9 @@
 				<% end %>
 			</div>
 		<% end %>
-		<div class="mx-auto mt-6 mb-24 space-y-2 is-animated sm:container">
+		<div class="mx-auto mt-6 mb-24 is-animated sm:container">
 			<%= link_to root_path, class: 'mt-6 md:px-0' do %>
-				<div class="c-chip">
+				<div class="c-chip w-full md:w-content">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-5 mr-3 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/>
 					</svg>
@@ -42,14 +42,8 @@
 						encontrado. <%= link_to 'Veja todos os eventos', root_path, class: 'text-brand-500' %>.</h2>
 				<% end %>
 				<% if @categories.present? %>
-					<div class="mx-auto">
-						<div class="flex flex-wrap md:px-0 mt-5">
-							<% @categories.each do |category| %>
-								<a href="<%= category_events_path category.details_url %>" class="c-chip mb-2 mr-2">
-									<%= category.details_display_name %>
-								</a>
-							<% end %>
-						</div>
+					<div class="mt-6">
+						<%= render 'feeds/filter_categories', categories: @categories %>
 					</div>
 				<% end %>
 			<% end %>
