--- a/web/app/views/events/_group_by_day_list.html.erb
+++ b/web/app/views/events/_group_by_day_list.html.erb
@@ -1,23 +1,55 @@
-<% events.group_by { |e| e.start_time.to_date.strftime("%Y-%m-%d") }.each do |group| %>
-	<div class="bg-white content-visibility-auto contain-intrinsic-size-md">
-		<div class="<%= class_names('sticky bg-white z-10 flex-1 px-5 pt-4 pb-2 leading-6 text-gray-600 md:leading-normal md:px-5',
-																{'top-0':  mobile_device?,
-																 'top-16': !mobile_device?}) %>">
-			<div class="text-xl font-semibold md:text-4xl"><%= day_of_week(group[0].to_date).titlecase %></div>
-			<% if group[0].to_date == Date.today || group[0].to_date == Date.tomorrow %>
-				<div class="-mt-1 border-b-2 border-brand-500  text-sm w-content"><%= "#{I18n.l(group[0].to_date, format: :week)} · #{I18n.l(group[0].to_date, format: :long)}" %></div>
-			<% elsif group[0].to_date < Date.today + 7 %>
-				<div class="-mt-1 border-b-2 border-brand-500  text-sm w-content"><%= "#{I18n.l(group[0].to_date, format: :long)}" %></div>
-			<% else %>
-				<div class="-mt-1 border-b-2 border-brand-500  text-sm w-content">daqui <%= distance_of_time_in_words group[0].to_date, DateTime.now %></div>
-			<% end %>
-		</div>
-		<div>
-			<% if mobile_device? %>
-				<%= render partial: 'feeds/horizontal_event', collection: group[1], as: :event, locals: {user: user} %>
-			<% else %>
-				<%= render partial: 'events/main_sidebar/horizontal_event', collection: group[1], as: :event, locals: {user: user} %>
+<div id="<%= "main-sidebar--group-by-day-list-#{pagy&.vars&.dig(:page)}" %>" data-controller="infinite-scroll" class="">
+	<div>
+		<% events.group_by { |e| e.start_time.to_date }&.each do |group| %>
+			<div id="<%= "main-sidebar--group-#{group[0]}" %>" class="relative pb-6 mb-3 border-b last:border-b-0">
+				<div class="sticky top-14 z-10 flex-1 pt-3 pb-3 pl-1 mb-3 -ml-1 leading-6 text-gray-600 bg-white md:top-16 md:bg-white md:leading-normal md:pb-2">
+					<div class="md:pt-4">
+						<div class="text-xs">
+							<%= l(group[0]&.to_date, format: "%d/%m") %>
+							<% if group[0].to_date > Date.today + 2 %>
+								&nbsp;<%= "· daqui #{distance_of_time_in_words(group[0]&.to_datetime, DateTime.now, false, highest_measure_only: true)}" %>
+							<% end %>
+						</div>
+						<div class="flex space-x-2 select-none">
+							<div class="flex items-center text-gray-800 uppercase">
+								<%= link_to day_events_path(day: group[0].to_date.strftime("%d-%m-%Y")), class: 'font-display text-sm font-medium', data: { 'turbo-preserve-scroll': true } do %>
+									<% if group[0].to_date.today? %>
+										Hoje, <%= I18n.l(group[0]&.to_date, format: :week).titlecase %>
+									<% elsif group[0].to_date == Date.tomorrow %>
+										Amanhã, <%= I18n.l(group[0]&.to_date, format: :week).titlecase %>
+									<% elsif group[0].to_date <= Date.today + 7 %>
+										<%= I18n.l(group[0]&.to_date, format: :week).titlecase %>
+									<% else %>
+										<%= I18n.l(group[0]&.to_date, format: :week).titlecase %>
+										, <%= I18n.l(group[0]&.to_date, format: :long).titlecase %>
+									<% end %>
+								<% end %>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="space-y-8">
+					<%= render partial: 'events/horizontal_event', collection: group[1], as: :event, locals: { user: user, open_in_sidebar: open_in_sidebar }, cached: -> event { [event, user&.likes] } %>
+				</div>
+			</div>
+		<% end %>
+		<div data-controller="loader"
+				 data-loader-on-loading="feed#load-more:loading"
+				 data-loader-on-loaded="feed#load-more:loaded">
+			<div
+				class="flex font-bold items-center text-brand-600 text-md text-2xl hidden"
+				data-loader-target="loading">
+				Carregando
+				<svg data-loader-target="onIcon" class="w-6 h-6 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+					<path fill="none" d="M0 0h24v24H0V0z"/>
+					<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
+				</svg>
+			</div>
+			<% if pagy && pagy&.last != pagy&.page %>
+				<div id="main-sidebar--group-by-day-list--pagination" data-loader-target="loaded" data-infinite-scroll-target="pagination" class="mt-3 mb-10 w-content">
+					<%== pagy_nav(pagy) %>
+				</div>
 			<% end %>
 		</div>
 	</div>
-<% end %>
+</div>
