--- a/web/app/views/feeds/index.turbo_stream.erb
+++ b/web/app/views/feeds/index.turbo_stream.erb
@@ -1,9 +1,9 @@
 <%= turbo_stream.after "main-sidebar--group-by-day-list-#{@pagy&.vars&.dig(:page)&.to_i - 1}" do %>
-	<%= render MainSidebar::GroupByDayListComponent.new(events:          @upcoming_events,
-																											user:            current_user,
-																											pagy:            @pagy,
-																											filters:         @filters,
-																											open_in_sidebar: true) %>
+	<%= render partial: 'events/group_by_day_list', locals: { events:          @upcoming_events,
+																														user:            current_user,
+																														pagy:            @pagy,
+																														filters:         @filters,
+																														open_in_sidebar: true } %>
 
 <% end %>
 
