--- a/web/app/views/users/show.html.erb
+++ b/web/app/views/users/show.html.erb
@@ -16,8 +16,8 @@
 			<div class="flex flex-wrap items-center justify-between w-full">
 				<div>
 					<h1 class="leading-tight c-h2">
-					<%= @user.name %>
-				</h1>
+						<%= @user.name %>
+					</h1>
 					<% if current_user != @user %>
 						<%= render FollowButtonComponent.new(followable: @user, user: current_user) %>
 					<% end %>
@@ -214,7 +214,7 @@
 					<%= user_is_current_user?(@user) ? "Minha agenda" : "Agenda de #{@user.name}" %>
 				</h2>
 				<% if @upcoming_events.present? %>
-					<%= render MainSidebar::GroupByDayListComponent.new(events: @upcoming_events, user: current_user, pagy: @pagy, filters: @filters, open_in_sidebar: true) %>
+					<%= render partial: 'events/group_by_day_list', locals: { events: @upcoming_events, user: current_user, pagy: @pagy, filters: @filters, open_in_sidebar: true } %>
 				<% else %>
 					<div class="flex justify-center items-center p-3 w-full h-72 bg-gray-50 rounded-lg">
 						<h2 class="my-auto mx-auto c-h3">
