--- a/web/app/views/components/_bottom-navigation.html.erb
+++ b/web/app/views/components/_bottom-navigation.html.erb
@@ -1,19 +1,19 @@
 <% if (controller_name == 'feeds' && action_name != 'show') ||
 	controller_name == 'users' ||
 	controller_name == 'search' %>
-	<div class="select-none  fixed bottom-0 z-40 w-full py-2 overflow-hidden transition-transform duration-100 transform bg-white md:hidden md:shadow-none elevation-8 md:sticky md:top-0 ripple ripple-black"
+	<div class="select-none  fixed bottom-0 z-40 w-full overflow-hidden transition-transform duration-100 transform bg-white md:hidden md:shadow-none elevation-8 md:sticky md:top-0 ripple ripple-black"
 			 data-controller="bottom-navigation"
 			 data-reflex-permanent
 			 data-toggle-style-active-class='["text-brand-500"]'
 			 data-toggle-style-current-selected="<%= "#{controller_name}-#{action_name}" %>"
 			 data-toggle-style-inactive-class='["text-gray-600"]'
 			 data-toggle-style-init-selected="<%= "#{controller_name}-#{action_name}" %>">
-		<div class="flex px-5 md:flex-col md:space-y-5">
+		<div class="flex md:flex-col md:space-y-5">
 			<a href="<%= root_path %>"
 				 data-toggle-style-target="toggle"
 				 data-action="click->toggle-style#toggle"
 				 data-toggle-style-identifier="feeds-index"
-				 class="<%= class_names 'cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
+				 class="<%= class_names 'py-2 cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
 																'text-brand-600': ['feeds', 'events'].include?(controller_name),
 																'text-gray-600':  !['feeds', 'events'].include?(controller_name) %>">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -25,7 +25,7 @@
 				 data-toggle-style-target="toggle"
 				 data-action="click->toggle-style#toggle"
 				 data-toggle-style-identifier="users-agenda"
-				 class="<%= class_names 'justify-between cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
+				 class="<%= class_names 'py-2 justify-between cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
 																'text-brand-600': current_page?('/minha-agenda'),
 																'text-gray-600':  !current_page?('/minha-agenda') %>">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
