Adjust back button size

--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -24,7 +24,7 @@
 			<div class="my-auto text-gray-800 md:hidden">
 				<% if props[:visible][:back_button] %>
 					<a onclick="TurboModule.backHistory()"
-						 class="relative select-none ripple ripple-black "
+						 class="flex h-8 inline-block items-center justify-center relative select-none w-8"
 						 tabindex="0"
 						 role="button"
 						 aria-label="Voltar">
