--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -44,7 +44,7 @@
 		<% end %>
 
 		<% unless params[:category] %>
-			<% cache @movies&.cache_version do %>
+			<% cache [@movies&.cache_version, current_user] do %>
 				<%= render partial: 'movies/movies', locals: { movies:         @movies,
 																											 selected_movie: @movie,
 																											 user:           current_user,
