--- a/web/app/components/large_event_component.html.erb
+++ b/web/app/components/large_event_component.html.erb
@@ -43,40 +43,20 @@
 															 alt:   @event.name,
 															 class: 'md:border border-gray-100 md:my-5 object-cover object-center w-full h-60 bg-gray-50 md:h-80 md:rounded-xl md:shadow-sm' %>
 		<div class="relative md:hidden">
-			<h1 class="c-h2 leading-8 pt-2 px-5">
+			<h1 class="px-5 pt-2 leading-8 c-h2">
 				<%= helpers.limit_name_size @event.name %>
 			</h1>
-			<div class="flex justify-between items-center py-2 px-5 border-b border-gray-100">
-				<div class="flex justify-between items-center mt-1 space-x-2 w-full md:hidden">
-					<div class="text-xs font-light text-gray-600">
-						<% if helpers.already_happened? @event %>
-							O evento ocorreu <%= I18n.l(@event.end_time) %>
-						<% else %>
-							Atualizado há <%= distance_of_time_in_words_to_now @event&.updated_at, except: ['minutes'] %>
-						<% end %>
-					</div>
-					<% unless @user&.dislike?(@event) %>
-						<%= content_tag :div,
-														id:    dom_id(@event, :like),
-														data:  {
-															reflex:     'click->Event#like',
-															'event-id': @event.id,
-															component:  'large-event'
-														},
-														class: helpers.class_names('cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 items-center justify-center rounded-full select-none  transform transition-transform',
-																											 { 'text-brand-600': @user&.like?(@event),
-																												 'text-gray-300':  !@user&.like?(@event) }) do %>
-							<svg class="<%= helpers.class_names 'group w-5 fill-current stroke-current', { 'fill-current': @user&.like?(@event) } %>" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 12.04 13.31">
-								<path fill="currentColor" stroke="currentColor" d="M11.54 1v11.39a.42.42 0 01-.63.36l-4.7-2.69A.35.35 0 006 10a.31.31 0 00-.19.06l-4.7 2.69a.42.42 0 01-.63-.36V1A.47.47 0 011 .5h10.06a.48.48 0 01.48.5z"/>
-							</svg>
-						<% end %>
-					<% end %>
-				</div>
+			<div class="px-5 text-xs font-light text-gray-600">
+				<% if helpers.already_happened? @event %>
+					O evento ocorreu <%= I18n.l(@event.end_time) %>
+				<% else %>
+					Atualizado há <%= distance_of_time_in_words_to_now @event&.updated_at, except: ['minutes'] %>
+				<% end %>
 			</div>
 		</div>
 		<% unless helpers.already_happened? @event %>
-			<div class="flex py-5 px-5 border-b border-gray-100 md:px-0 text-brand-600">
-				<div class="flex flex-col justify-center py-2 px-3 my-auto mr-5 text-center rounded-lg bg-brand-100 h-15 w-content">
+			<div class="flex py-5 px-5 mt-5 border-t md:border-t-0 md:px-0 text-brand-600">
+				<div class="flex flex-col justify-center py-2 px-3 mr-5 text-center rounded-lg bg-brand-100 h-14 w-content">
 					<div class="text-sm font-bold leading-tight uppercase">
 						<% if @event.start_time < Date.today + 7 %>
 							<%= I18n.l(@event&.start_time&.to_date, format: :week) %>
@@ -86,8 +66,7 @@
 					</div>
 					<div class="text-sm"><%= helpers.format_hour @event.start_time unless @event.multiple_hours? %></div>
 				</div>
-
-				<div class="my-auto text-sm leading-snug md:text-base">
+				<div class="md:text-base my-auto text-gray-700 text-sm">
 					<% if @event.multiple_hours? %>
 						<%= "#{I18n.l(@event.start_time, format: :day_month_year).capitalize}, em múltiplos horários#{'.' unless @event&.start_time > DateTime.now + 2}" %>
 						<%= ", daqui #{helpers.distance_of_time_in_words @event&.start_time, DateTime.now, false, except: ['minutes']}." if @event&.start_time > DateTime.now + 2 %>
@@ -98,7 +77,67 @@
 				</div>
 			</div>
 		<% end %>
-		<div class="flex flex-col py-6 px-5 border-b border-gray-100 md:px-0 md:border-0 md:flex-row">
+		<div class="flex justify-between py-4 px-5 border-t border-b md:hidden">
+			<div id="<%= dom_id(@event, :like) %>"
+					 data-reflex="click->Event#like"
+					 data-event-id="<%= @event.id %>"
+					 data-component="large-event"
+					 class="flex flex-col items-center">
+				<div class="<%= helpers.class_names('w-12 h-12 mb-1 border cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 items-center justify-center rounded-full select-none  transform transition-transform',
+																						{ 'text-brand-600 border-brand-600': @user&.like?(@event),
+																							'text-gray-500':                   !@user&.like?(@event) }) %>">
+					<svg class="w-5 fill-current stroke-current group" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 12.04 13.31">
+						<path fill="currentColor" stroke="currentColor" d="M11.54 1v11.39a.42.42 0 01-.63.36l-4.7-2.69A.35.35 0 006 10a.31.31 0 00-.19.06l-4.7 2.69a.42.42 0 01-.63-.36V1A.47.47 0 011 .5h10.06a.48.48 0 01.48.5z"/>
+					</svg>
+				</div>
+				<span class="<%= helpers.class_names('font-medium text-xs uppercase', { 'text-brand-600': @user&.like?(@event) }) %>">
+						<%= @user&.like?(@event) ? 'Salvo' : 'Salvar' %>
+				</span>
+			</div>
+			<a href="<%= @event.source_url %>"
+				 target="_blank"
+				 rel="nofollow noreferrer"
+				 class="flex flex-col items-center">
+				<div class="<%= helpers.class_names('w-12 h-12 mb-1 border cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 items-center justify-center rounded-full select-none  transform transition-transform text-gray-600') %>">
+					<svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 stroke-current" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1"/>
+					</svg>
+				</div>
+				<span class="text-xs font-medium uppercase">
+						Site oficial
+					</span>
+			</a>
+			<a href="<%= @event.ticket_url %>"
+				 target="_blank"
+				 rel="nofollow noreferrer"
+				 class="flex flex-col items-center">
+				<div class="<%= helpers.class_names('w-12 h-12 mb-1 border cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 items-center justify-center rounded-full select-none  transform transition-transform text-gray-600') %>">
+					<svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 stroke-current" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 5v2m0 4v2m0 4v2M5 5a2 2 0 00-2 2v3a2 2 0 110 4v3a2 2 0 002 2h14a2 2 0 002-2v-3a2 2 0 110-4V7a2 2 0 00-2-2H5z"/>
+					</svg>
+				</div>
+				<span class="text-xs font-medium uppercase">
+						Ingresso
+				</span>
+			</a>
+			<div data-controller="share-button"
+					 data-share-button-text="<%= strip_tags(helpers.limit_description_size(@event.description, 160)) %>"
+					 data-share-button-title="<%= @event.name %>"
+					 data-share-button-url="<%= event_url(@event, format: :html) %>"
+					 data-action="click->share-button#share"
+					 class="flex flex-col items-center">
+				<input class="absolute opacity-0" style="bottom: -30px" data-share-button-target="input" type="text" value="<%= event_url(@event, format: :html) %>">
+				<div class="<%= helpers.class_names('w-12 h-12 mb-1 border cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 items-center justify-center rounded-full select-none  transform transition-transform text-gray-600') %>">
+					<svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 stroke-current" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"/>
+					</svg>
+				</div>
+				<span class="text-xs font-medium uppercase">
+						Compartilhar
+				</span>
+			</div>
+		</div>
+		<div class="flex flex-col py-6 px-5 border-b md:px-0 md:border-0 md:flex-row">
 			<div class="flex-grow">
 				<%= link_to place_path(@event&.place), class: 'inline items-center space-x-2 group', data: { 'turbo-preserve-scroll': true } do %>
 					<h2 class="inline uppercase c-h3 group-hover:text-brand-600">
