--- a/web/app/components/hero/horizontal_event_component.html.erb
+++ b/web/app/components/hero/horizontal_event_component.html.erb
@@ -20,7 +20,7 @@
 					<%= helpers.day_of_week(@event.start_time)&.capitalize %>
 					· <%= @event.multiple_hours? ? '+1 horário' : "#{helpers.format_hour(@event.start_time)}h" %> ·
 					<span class="text-brand-600"><%= @event&.categories_display_name&.capitalize %> ·</span>
-					<%= link_to helpers.limit_place_name_size(@event.place_name, 24), place_path(@event.place), class: 'md:hover:underline capitalize' %>
+					<%= link_to helpers.limit_place_name_size(@event.place_name, 24)&.titleize, place_path(@event.place), class: 'md:hover:underline capitalize' %>
 				</div>
 				<div class="font-light hidden md:inline-block mt-2 text-gray-700 text-sm">
 					<%= helpers.limit_description_size @event.description, 120 %>
@@ -44,27 +44,21 @@
 				<% end %>
 			</div>
 		</div>
-		<div class="flex mt-3 space-x-4 flex-wrap">
+		<div class="flex mt-3 space-x-3 flex-wrap">
 			<%= content_tag :div, data: { action: 'click->hero--horizontal-event#like', 'event-id': @event.id }, class: 'c-chip' do %>
-				<svg class="<%= helpers.class_names 'h-5 w-5 stroke-current',
-																						{ '': !@user&.like?(@event),
-																							'': @user&.like?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5"/>
+				<svg class="fill-current stroke-current text-gray-500 w-3" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 12.04 13.31">
+					<path fill="currentColor" stroke="currentColor" d="M11.54 1v11.39a.42.42 0 01-.63.36l-4.7-2.69A.35.35 0 006 10a.31.31 0 00-.19.06l-4.7 2.69a.42.42 0 01-.63-.36V1A.47.47 0 011 .5h10.06a.48.48 0 01.48.5z"/>
 				</svg>
-				<span class="<%= helpers.class_names('ml-1', { '': !@user&.like?(@event),
-																											 '': @user&.like?(@event) }) %>">
-						Curti
-					</span>
+				<span class="ml-2">
+						Salvar
+				</span>
 			<% end %>
 			<%= content_tag :div, data: { action: 'click->hero--horizontal-event#dislike', 'event-id': @event.id }, class: 'c-chip' do %>
-				<svg class="<%= helpers.class_names 'h-5 w-5 stroke-current',
-																						{ '': !@user&.dislike?(@event),
-																							'': @user&.dislike?(@event) } %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14H5.236a2 2 0 01-1.789-2.894l3.5-7A2 2 0 018.736 3h4.018a2 2 0 01.485.06l3.76.94m-7 10v5a2 2 0 002 2h.096c.5 0 .905-.405.905-.904 0-.715.211-1.413.608-2.008L17 13V4m-7 10h2m5-10h2a2 2 0 012 2v6a2 2 0 01-2 2h-2.5"/>
+				<svg xmlns="http://www.w3.org/2000/svg" class="h-5 stroke-current text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.933 12.8a1 1 0 000-1.6L6.6 7.2A1 1 0 005 8v8a1 1 0 001.6.8l5.333-4zM19.933 12.8a1 1 0 000-1.6l-5.333-4A1 1 0 0013 8v8a1 1 0 001.6.8l5.333-4z"/>
 				</svg>
-				<span class="<%= helpers.class_names('ml-1', { '': !@user&.like?(@event),
-																											 '': @user&.like?(@event) }) %>">
-						Não Curti
+				<span class="ml-1">
+						Pular
 					</span>
 			<% end %>
 		</div>
