--- a/web/app/components/large_event_component.html.erb
+++ b/web/app/components/large_event_component.html.erb
@@ -82,7 +82,7 @@
 					 data-reflex="click->Event#like"
 					 data-event-id="<%= @event.id %>"
 					 data-component="large-event"
-					 class="flex flex-col items-center">
+					 class="flex flex-col items-center flex-1">
 				<div class="<%= helpers.class_names('w-12 h-12 mb-1 border cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 items-center justify-center rounded-full select-none  transform transition-transform',
 																						{ 'text-brand-600 border-brand-600': @user&.like?(@event),
 																							'text-gray-500':                   !@user&.like?(@event) }) %>">
@@ -97,7 +97,7 @@
 			<a href="<%= @event.source_url %>"
 				 target="_blank"
 				 rel="nofollow noreferrer"
-				 class="flex flex-col items-center">
+				 class="flex flex-col items-center flex-1">
 				<div class="<%= helpers.class_names('w-12 h-12 mb-1 border cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 items-center justify-center rounded-full select-none  transform transition-transform text-gray-600') %>">
 					<svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 stroke-current" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1"/>
@@ -107,25 +107,27 @@
 						Site oficial
 					</span>
 			</a>
-			<a href="<%= @event.ticket_url %>"
-				 target="_blank"
-				 rel="nofollow noreferrer"
-				 class="flex flex-col items-center">
-				<div class="<%= helpers.class_names('w-12 h-12 mb-1 border cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 items-center justify-center rounded-full select-none  transform transition-transform text-gray-600') %>">
-					<svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 stroke-current" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 5v2m0 4v2m0 4v2M5 5a2 2 0 00-2 2v3a2 2 0 110 4v3a2 2 0 002 2h14a2 2 0 002-2v-3a2 2 0 110-4V7a2 2 0 00-2-2H5z"/>
-					</svg>
-				</div>
-				<span class="text-xs font-medium uppercase">
+			<% if @event&.ticket_url&.present? %>
+				<a href="<%= @event.ticket_url %>"
+					 target="_blank"
+					 rel="nofollow noreferrer"
+					 class="flex flex-col items-center flex-1">
+					<div class="<%= helpers.class_names('w-12 h-12 mb-1 border cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 items-center justify-center rounded-full select-none  transform transition-transform text-gray-600') %>">
+						<svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 stroke-current" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 5v2m0 4v2m0 4v2M5 5a2 2 0 00-2 2v3a2 2 0 110 4v3a2 2 0 002 2h14a2 2 0 002-2v-3a2 2 0 110-4V7a2 2 0 00-2-2H5z"/>
+						</svg>
+					</div>
+					<span class="text-xs font-medium uppercase">
 						Ingresso
 				</span>
-			</a>
+				</a>
+			<% end %>
 			<div data-controller="share-button"
 					 data-share-button-text="<%= strip_tags(helpers.limit_description_size(@event.description, 160)) %>"
 					 data-share-button-title="<%= @event.name %>"
 					 data-share-button-url="<%= event_url(@event, format: :html) %>"
 					 data-action="click->share-button#share"
-					 class="flex flex-col items-center">
+					 class="flex flex-col items-center flex-1">
 				<input class="absolute opacity-0" style="bottom: -30px" data-share-button-target="input" type="text" value="<%= event_url(@event, format: :html) %>">
 				<div class="<%= helpers.class_names('w-12 h-12 mb-1 border cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 items-center justify-center rounded-full select-none  transform transition-transform text-gray-600') %>">
 					<svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 stroke-current" fill="none" viewBox="0 0 24 24" stroke="currentColor">
