--- a/web/app/views/components/_tab-bar.html.erb
+++ b/web/app/views/components/_tab-bar.html.erb
@@ -11,37 +11,27 @@
 
 <% if props[:feed] || (props[:movies] && !mobile_device?) %>
 	<div class="scrollx lg:w-9/12 md:mt-5 mx-auto"
-			 data-controller="toggle-style go-to"
+			 data-controller="go-to"
 			 data-go-to-delay="250"
 			 data-reflex-permanent
 			 data-head-target="tabBar"
-			 data-toggle-style-active-class='["border-b-2","border-brand-600","font-bold","text-brand-600"]'
-			 data-toggle-style-current-selected="<%= "#{controller_name}-#{action_name}" %>"
-			 data-toggle-style-inactive-class='["text-gray-800"]'
-			 data-toggle-style-init-selected="<%= "#{controller_name}-#{action_name}" %>"
 			 id="tab-bar">
 		<div class="antialiased font-semibold gap-5 grid grid-flow-col md:pl-0 md:text-base pt-3 px-5 text-sm w-content">
-			<div data-action="click->toggle-style#toggle click->go-to#url"
-					 data-toggle-style-target="toggle"
-					 data-toggle-style-identifier="feeds-index"
+			<div data-action="click->go-to#url"
 					 data-go-to-url="<%= root_path %>"
 					 class="<%= class_string('border-b-2 border-brand-600 font-bold text-brand-600':                                                                                                 controller_name == 'feeds' && action_name == 'index',
 																	 'text-gray-800':                                                                                                                                        controller_name != 'feeds',
 																	 ' outline-none pb-2 px-4 w-content cursor-pointer select-none transform transition-colors duration-200 hover:text-brand-500': true) %>">
 				Para você
 			</div>
-			<div data-action="click->toggle-style#toggle click->go-to#url"
-					 data-toggle-style-target="toggle"
-					 data-toggle-style-identifier="feeds-category"
+			<div data-action="click->go-to#url"
 					 data-go-to-url="<%= category_events_path %>"
 					 class="<%= class_string('border-b-2 border-brand-600 font-bold text-brand-600':                                                                                                 action_name == 'category',
 																	 'text-gray-800':                                                                                                                                        action_name != 'category',
 																	 ' outline-none pb-2 px-4 w-content cursor-pointer select-none transform transition-colors duration-200 hover:text-brand-500': true) %>">
 				Categorias
 			</div>
-			<div data-action="click->toggle-style#toggle click->go-to#url"
-					 data-toggle-style-target="toggle"
-					 data-toggle-style-identifier="feeds-city"
+			<div data-action="click->go-to#url"
 					 data-go-to-url="<%= city_events_path %>"
 					 class="<%= class_string('border-b-2 border-brand-600 font-bold text-brand-600':                                                                                                 action_name == 'city',
 																	 'text-gray-800':                                                                                                                                        action_name != 'city',
@@ -49,9 +39,7 @@
 				Explorar tudo
 			</div>
 			<% unless mobile_device? %>
-				<div data-action="click->toggle-style#toggle click->go-to#url"
-						 data-toggle-style-target="toggle"
-						 data-toggle-style-identifier="movies"
+				<div data-action="click->go-to#url"
 						 data-go-to-url="<%= movies_path %>"
 						 class="<%= class_string('border-b-2 border-brand-600 font-bold text-brand-600':                                                                                                 controller_name == 'movies',
 																		 'text-gray-800':                                                                                                                                        controller_name != 'movies',
