--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -4,10 +4,10 @@
 <%= render ModalComponent.new %>
 
 <% unless current_user || params[:day] || params[:category] %>
-	<div id="hero__presentation" data-turbo-permanent="" class="overflow-hidden relative gap-3 items-center mb-6 h-72 bg-gray-100 select-none md:h-52 md:items-start md:mb-12 md:mx-0 " style="min-height: 200px;background: linear-gradient(0deg, #f9f9f9, transparent); ">
+	<div id="hero__presentation" data-turbo-permanent="" class="overflow-hidden relative gap-3 items-center mb-6 h-96 bg-gray-100 select-none md:h-64 md:items-start md:mb-12 md:mx-0" style="min-height: 200px;background: linear-gradient(0deg, #f9f9f9, transparent); ">
 		<div class="relative z-20 mx-auto max-w-screen-lg h-full">
-			<%= image_tag 'https://alegreme.sfo2.cdn.digitaloceanspaces.com/stable-images/banner.png', class: 'z-10 -top-12 absolute md:-top-24 md:right-0 md:w-4/12 object-cover top-0 w-full' %>
-			<div class="flex relative z-20 flex-col justify-end items-center pb-5 px-5 md:px-0 h-full md:justify-center md:items-baseline md:w-7/12">
+			<%= image_tag 'https://alegreme.sfo2.cdn.digitaloceanspaces.com/stable-images/banner.png', class: 'md:-top-24 h-48 md:absolute md:right-0 md:w-4/12 object-cover top-0 w-full z-10' %>
+			<div class="flex hidden relative z-20 flex-col justify-end items-center px-5 pb-5 md:px-0 md:justify-center md:items-baseline md:w-7/12">
 				<h1 class="hidden md:inline-block c-h2">
 					Eventos e cinema em Porto Alegre
 				</h1>
@@ -15,8 +15,29 @@
 					Eventos e cinema em Porto Alegre
 				</h1>
 				<span class="px-6 md:px-0 md:w-8/12 text-center md:text-left block leading-snug md:inline-block md:leading-normal md:text-base mt-1.5 text-xs">
-    		Shows, festas, cinema, feiras de rua... quase tudo que acontece em Porto Alegre está aqui 🤙
-			</span>
+    			Shows, festas, cinema, feiras de rua... quase tudo que acontece em Porto Alegre está aqui 🤙
+				</span>
+			</div>
+			<div class="flex flex-col items-center space-y-3 md:items-start">
+				<h1 class="hidden md:inline-block mt-8 c-h2">
+					Eventos e cinema em Porto Alegre
+				</h1>
+				<h1 class="text-center md:hidden c-h2">
+					Eventos e cinema em Porto Alegre
+				</h1>
+				<div class="flex justify-center mx-12 -space-x-3 md:mx-0">
+					<% cache @users.cache_version do %>
+						<% @users.each do |user| %>
+							<%= image_tag(user.picture, { class: "w-8 h-8 rounded-full border-white border-2 bg-gray-200", style: 'filter: grayscale(0.8)', alt: user.name, onerror: "this.src='https://ui-avatars.com/api/?size=24&background=random&name=#{user.name}'" }) rescue nil %>
+						<% end %>
+					<% end %>
+				</div>
+				<span class="px-6 md:px-0 md:w-8/12 text-center md:text-left block leading-snug md:inline-block md:leading-normal md:text-base mt-1.5 text-xs">
+					Junte-se a mais de 10.000 pessoas e aproveite
+					shows, festas, cinema, feiras de rua... Crie sua conta, é grátis 🤙
+				</span>
+				<a href="<%= new_user_registration_path %>" class="inline-flex items-center py-2 px-4 text-sm font-medium text-white rounded-md border border-transparent shadow-sm md:inline-block bg-brand-600 focus:outline-none focus:ring-2 focus:ring-brand-500 focus:ring-offset-2 hover:bg-brand-500">Criar
+					conta</a>
 			</div>
 		</div>
 	</div>
@@ -57,7 +78,7 @@
 			<% end %>
 		<% end %>
 
-		<turbo-frame id="main-sidebar--feed" target="_top" class="px-5 md:px-0 inline-block w-full">
+		<turbo-frame id="main-sidebar--feed" target="_top" class="inline-block px-5 w-full md:px-0">
 			<% if @upcoming_events.present? %>
 				<div class="bg-white">
 
@@ -117,7 +138,7 @@
 	<% end %>
 
 
-	<!--	<div data-controller="install" data-install-native="true" data-install-target="button" class="flex fixed bottom-20 z-30 items-center w-full transition-transform transform translate-y-32 select-none ">-->
+	<!--	<div data-controller="install" data-install-native="true" data-install-target="button" class="flex fixed bottom-20 z-30 items-center w-full transition-transform transform translate-y-32 select-none">-->
 	<!--		<span data-action="click->install#install" class="py-3 px-5 mx-auto font-bold text-white bg-white rounded-full shadow-lg bg-brand-500 w-content">-->
 	<!--			Instalar aplicativo-->
 	<!--		</span>-->
