--- a/web/app/components/hero/horizontal_event_component.html.erb
+++ b/web/app/components/hero/horizontal_event_component.html.erb
@@ -46,15 +46,15 @@
 		</div>
 		<div class="flex mt-3 space-x-3 flex-wrap">
 			<%= content_tag :div, data: { action: 'click->hero--horizontal-event#like', 'event-id': @event.id }, class: 'c-chip' do %>
-				<svg class="fill-current stroke-current text-gray-500 w-3" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 12.04 13.31">
-					<path fill="currentColor" stroke="currentColor" d="M11.54 1v11.39a.42.42 0 01-.63.36l-4.7-2.69A.35.35 0 006 10a.31.31 0 00-.19.06l-4.7 2.69a.42.42 0 01-.63-.36V1A.47.47 0 011 .5h10.06a.48.48 0 01.48.5z"/>
+				<svg class="stroke-current h-4" fill="none" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 24 24">
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 5a2 2 0 012-2h10a2 2 0 012 2v16l-7-3.5L5 21V5z"/>
 				</svg>
-				<span class="ml-2">
+				<span class="ml-1">
 						Salvar
 				</span>
 			<% end %>
 			<%= content_tag :div, data: { action: 'click->hero--horizontal-event#dislike', 'event-id': @event.id }, class: 'c-chip' do %>
-				<svg xmlns="http://www.w3.org/2000/svg" class="h-5 stroke-current text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+				<svg xmlns="http://www.w3.org/2000/svg" class="h-5 stroke-current" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.933 12.8a1 1 0 000-1.6L6.6 7.2A1 1 0 005 8v8a1 1 0 001.6.8l5.333-4zM19.933 12.8a1 1 0 000-1.6l-5.333-4A1 1 0 0013 8v8a1 1 0 001.6.8l5.333-4z"/>
 				</svg>
 				<span class="ml-1">
