--- a/web/app/javascript/stylesheets/_components.scss
+++ b/web/app/javascript/stylesheets/_components.scss
@@ -28,7 +28,7 @@
   }
 
   .c-chip {
-    @apply border inline-block flex justify-start items-center py-2 px-4 text-sm font-medium text-gray-700 bg-white rounded-full transition-all transition-colors duration-100 transform cursor-pointer select-none md:text-base font-display md:hover:bg-brand-100 md:hover:border-brand-100 md:hover:text-gray-700  w-content;
+    @apply border inline-block flex justify-start items-center py-2 px-4 text-sm font-medium text-gray-700 bg-white rounded-full transition-all transition-colors duration-100 transform cursor-pointer select-none md:text-base font-display md:hover:bg-brand-100 md:hover:border-brand-300 md:hover:text-brand-600  w-content;
 
     &--active {
       @apply inline-block border border-brand-600  flex justify-start items-center py-2 px-4 text-sm font-medium rounded-full transition-all transition-colors duration-100 transform cursor-pointer select-none md:text-base bg-brand-600 font-display md:hover:bg-brand-700 md:hover:border-brand-700 md:hover:text-white  text-white w-content;
