--- a/web/app/views/feeds/_filter_categories.html.erb
+++ b/web/app/views/feeds/_filter_categories.html.erb
@@ -4,12 +4,15 @@
 
 		<%= link_to root_path(category: category.details_url, filter_group: 'category'),
 								data:  { 'turbo-frame': 'main-sidebar--feed' },
-								class: class_names('w-full h-24 rounded-lg border p-3',
+								class: class_names('relative w-full h-24 rounded-lg border p-3',
 																	 { 'text-brand-600 bg-brand-100 border-brand-300': @category == category,
 																		 'text-gray-700':                                @category != category }) do %>
 			<div class="space-y-1">
 				<div class="text-lg"><%= category.details_emoji %></div>
 				<div><%= category.details_display_name %></div>
+			</div>
+			<div class="flex absolute top-2 right-2 justify-center items-center w-6 h-6 text-xxs bg-gray-100 rounded-full">
+				<%= category.active_events_count %>
 			</div>
 		<% end %>
 	<% end %>
@@ -20,12 +23,15 @@
 
 		<%= link_to root_path(category: category.details_url, filter_group: 'category'),
 								data:  { 'turbo-frame': 'main-sidebar--feed' },
-								class: class_names('w-full h-24 rounded-lg border p-3',
+								class: class_names('relative w-full h-24 rounded-lg border p-3',
 																	 { 'text-brand-600 bg-brand-100 border-brand-300': @category == category,
 																		 'text-gray-700':                                @category != category }) do %>
 			<div class="space-y-1">
 				<div class="text-lg"><%= category.details_emoji %></div>
 				<div><%= category.details_display_name %></div>
+			</div>
+			<div class="flex absolute top-2 right-2 justify-center items-center w-6 h-6 text-xxs bg-gray-100 rounded-full">
+				<%= category.active_events_count %>
 			</div>
 		<% end %>
 	<% end %>
